--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
+<!--
+  ~ Copyright (c) 2023. Created by alexsander at 12/22. All rights reserved.
+  ~ GitHub: https://github.com/alexsanderfer/
+  ~ Portfolio: https://alexsanderfer.netlify.app/
+  -->
+
 <resources>
     <string name="app_name">Interface Netflix</string>
     <string name="tv_shows">Séries</string>
