--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="violence">Violência</string>
     <string name="empolgante">Empolgante</string>
     <string name="sinistro">Sinistro</string>
+    <string name="watch">Assistir</string>
+    <string name="details">Detalhes</string>
+    <string name="lancamentos">Lançamentos</string>
 </resources>
